--- a/xw.html
+++ b/xw.html
@@ -135,6 +135,8 @@
 <tr><td>1944</td><td>殷素素(17)第7格武功设为九阳神功(266)1级</td></tr>
 <tr><td>1949</td><td>殷素素(17)第5格武功设为圣火万法(286)1级</td></tr>
 <tr><td>1949</td><td>殷素素(17)第6格武功设为圣火诀(334)1级</td></tr>
+<tr><td>1949</td><td>殷素素(17)第7格武功设为阴风刀(253)1级</td></tr>
+<tr><td>1949</td><td>殷素素(17)第8格武功设为透骨针(699)1级</td></tr>
 <tr><td>1955</td><td>殷素素(17)第6格武功设为七伤拳(42)1级</td></tr>
 <tr><td>1955</td><td>殷素素(17)第7格武功设为金刚伏魔鞭(263)1级</td></tr>
 <tr><td>1955</td><td>殷素素(17)第8格武功设为狮子吼(708)1级</td></tr>
@@ -176,7 +178,7 @@
 <tr><td>1962</td><td>黛绮丝(30)第5格武功设为黄天大法(368)1级</td></tr>
 <tr><td>2445</td><td>林平之(36)第2格武功设为万剑归宗(769)10级</td></tr>
 <tr><td>2445</td><td>林平之(36)第3格武功设为独孤九剑(457)10级</td></tr>
-<tr><td>1632</td><td>阿紫(47)第4格武功设为三笑逍遥散(1013)1级</td></tr>
+<tr><td>1632</td><td>阿紫(47)第2格武功设为流毒万方(897)10级</td></tr>
 <tr><td>1723</td><td>阿紫(47)第3格武功设为碧磷针(673)1级</td></tr>
 <tr><td>1723</td><td>阿紫(47)第4格武功设为穿心钉(674)1级</td></tr>
 <tr><td>1723</td><td>阿紫(47)第5格武功设为极乐刺(675)1级</td></tr>
@@ -185,9 +187,9 @@
 <tr><td>1723</td><td>阿紫(47)第8格武功设为抽髓掌(11)1级</td></tr>
 <tr><td>1723</td><td>阿紫(47)第9格武功设为三阴蜈蚣爪(295)1级</td></tr>
 <tr><td>1725</td><td>阿紫(47)第3格武功设为渔叟钩法(231)1级</td></tr>
-<tr><td>1726</td><td>阿紫(47)第2格武功设为连珠腐尸毒(672)1级</td></tr>
-<tr><td>1726</td><td>阿紫(47)第3格武功设为化功大法(758)1级</td></tr>
-<tr><td>1726</td><td>阿紫(47)第4格武功设为龟息真定(275)1级</td></tr>
+<tr><td>1726</td><td>阿紫(47)第2格武功设为三笑逍遥散(1013)1级</td></tr>
+<tr><td>1726</td><td>阿紫(47)第3格武功设为连珠腐尸毒(672)1级</td></tr>
+<tr><td>1726</td><td>阿紫(47)第4格武功设为化功大法(758)1级</td></tr>
 <tr><td>1744</td><td>阿紫(47)第4格武功设为神足摩地(954)1级</td></tr>
 <tr><td>1765</td><td>阿紫(47)第4格武功设为擒龙功(329)1级</td></tr>
 <tr><td>1769</td><td>阿紫(47)第5格武功设为缠丝擒拿手(415)1级</td></tr>
@@ -197,9 +199,9 @@
 <tr><td>1778</td><td>阿紫(47)第4格武功设为惊鸿照影(1008)1级</td></tr>
 <tr><td>1778</td><td>阿紫(47)第5格武功设为化石九转(942)1级</td></tr>
 <tr><td>1789</td><td>阿紫(47)第5格武功设为苍狼血魄(940)1级</td></tr>
-<tr><td>1791</td><td>阿紫(47)第3格武功设为龙行虎步(1078)1级</td></tr>
 <tr><td>1791</td><td>阿紫(47)第4格武功设为导气归虚(933)1级</td></tr>
-<tr><td>1791</td><td>阿紫(47)第6格武功设为天南剑法(721)1级</td></tr>
+<tr><td>1791</td><td>阿紫(47)第6格武功设为龙行虎步(1078)1级</td></tr>
+<tr><td>1791</td><td>阿紫(47)第7格武功设为天南剑法(721)1级</td></tr>
 <tr><td>1792</td><td>阿紫(47)第7格武功设为六脉神剑(452)1级</td></tr>
 <tr><td>1793</td><td>阿紫(47)第4格武功设为寒袖拂穴(328)1级</td></tr>
 <tr><td>1796</td><td>阿紫(47)第6格武功设为一阳指(332)1级</td></tr>
@@ -233,7 +235,6 @@
 <tr><td>1963</td><td>黄蓉(56)第4格武功设为九阳神功(266)1级</td></tr>
 <tr><td>1988</td><td>黄蓉(56)第5格武功设为江浪三叠(1088)1级</td></tr>
 <tr><td>1988</td><td>黄蓉(56)第6格武功设为武当绵掌(27)1级</td></tr>
-<tr><td>2040</td><td>黄蓉(56)第5格武功设为飞龙枪法(713)1级</td></tr>
 <tr><td>2040</td><td>黄蓉(56)第6格武功设为金刚伏魔功(391)1级</td></tr>
 <tr><td>2040</td><td>黄蓉(56)第7格武功设为金刚不坏(755)1级</td></tr>
 <tr><td>2041</td><td>黄蓉(56)第5格武功设为飞龙枪法(713)1级</td></tr>
@@ -375,7 +376,12 @@
 <tr><td>943</td><td>王语嫣(76)第1格武功设为点墨山河(1019)10级</td></tr>
 <tr><td>950</td><td>王语嫣(76)第4格武功设为御法绝尘(1077)10级</td></tr>
 <tr><td>1608</td><td>王语嫣(76)第4格武功设为逍遥神剑(92)1级</td></tr>
-<tr><td>1611</td><td>王语嫣(76)第3格武功设为北冥神功(759)1级</td></tr>
+<tr><td>1630</td><td>王语嫣(76)第2格武功设为天鉴神功(192)10级</td></tr>
+<tr><td>1630</td><td>王语嫣(76)第3格武功设为天山折梅手(456)1级</td></tr>
+<tr><td>1630</td><td>王语嫣(76)第4格武功设为北冥神功(759)1级</td></tr>
+<tr><td>1630</td><td>王语嫣(76)第5格武功设为天山六阳掌(50)1级</td></tr>
+<tr><td>1630</td><td>王语嫣(76)第6格武功设为星丸跳掷(700)1级</td></tr>
+<tr><td>1630</td><td>王语嫣(76)第7格武功设为冥光气刀(265)1级</td></tr>
 <tr><td>1635</td><td>王语嫣(76)第5格武功设为八荒六合(290)1级</td></tr>
 <tr><td>1636</td><td>王语嫣(76)第5格武功设为八荒六合(290)1级</td></tr>
 <tr><td>1695</td><td>王语嫣(76)第3格武功设为白虹掌力(43)10级</td></tr>
@@ -415,7 +421,7 @@
 <tr><td>2324</td><td>王语嫣(76)第5格武功设为太玄虚箓(779)1级</td></tr>
 <tr><td>2608</td><td>王语嫣(76)第6格武功设为独孤九剑(457)1级</td></tr>
 <tr><td>2912</td><td>王语嫣(76)第1格武功设为点墨山河(1019)10级</td></tr>
-<tr><td>2912</td><td>王语嫣(76)第3格武功设为妙法无形(165)10级</td></tr>
+<tr><td>2912</td><td>王语嫣(76)第4格武功设为妙法无形(165)10级</td></tr>
 <tr><td>2912</td><td>王语嫣(76)第7格武功设为不死印法(909)1级</td></tr>
 <tr><td>2913</td><td>王语嫣(76)第5格武功设为剑心通明(1083)1级</td></tr>
 <tr><td>2913</td><td>王语嫣(76)第6格武功设为彼岸剑诀(470)1级</td></tr>
@@ -741,18 +747,17 @@
 <tr><td>1470</td><td>阿九(144)第5格武功设为紫禁皇掌(1014)1级</td></tr>
 <tr><td>1475</td><td>阿九(144)第5格武功设为雷火神铳(707)1级</td></tr>
 <tr><td>1475</td><td>阿九(144)第6格武功设为神行百变(745)1级</td></tr>
-<tr><td>1476</td><td>阿九(144)第7格武功设为少阳玄功(941)1级</td></tr>
 <tr><td>1540</td><td>阿九(144)第6格武功设为疯魔杖法(444)1级</td></tr>
 <tr><td>1540</td><td>阿九(144)第7格武功设为狐行四相(934)1级</td></tr>
 <tr><td>1549</td><td>阿九(144)第5格武功设为紫禁皇掌(1014)1级</td></tr>
 <tr><td>1556</td><td>阿九(144)第5格武功设为雷火神铳(707)1级</td></tr>
 <tr><td>1556</td><td>阿九(144)第6格武功设为神行百变(745)1级</td></tr>
-<tr><td>1557</td><td>阿九(144)第7格武功设为少阳玄功(941)1级</td></tr>
 <tr><td>1592</td><td>阿九(144)第6格武功设为疯魔杖法(444)1级</td></tr>
 <tr><td>1592</td><td>阿九(144)第7格武功设为狐行四相(934)1级</td></tr>
 <tr><td>1685</td><td>阿九(144)第5格武功设为枯禅神功(284)1级</td></tr>
 <tr><td>2309</td><td>阿九(144)第5格武功设为银鞍白马(744)1级</td></tr>
 <tr><td>2309</td><td>阿九(144)第6格武功设为吴钩霜雪明(639)1级</td></tr>
+<tr><td>2871</td><td>阿九(144)第4格武功设为少阳玄功(941)1级</td></tr>
 <tr><td>2878</td><td>阿九(144)第2格武功设为天弈剑术(82)1级</td></tr>
 <tr><td>2879</td><td>阿九(144)第4格武功设为凤歌云阙(1005)10级</td></tr>
 <tr><td>2885</td><td>阿九(144)第3格武功设为玄女剑法(436)1级</td></tr>
@@ -898,7 +903,7 @@
 <tr><td>1273</td><td>阿绣(221)第4格武功设为神照功诀(282)1级</td></tr>
 <tr><td>2267</td><td>阿绣(221)第4格武功设为无妄神咒(276)1级</td></tr>
 <tr><td>2267</td><td>阿绣(221)第5格武功设为飞鸿遁雪(501)1级</td></tr>
-<tr><td>2271</td><td>阿绣(221)第5格武功设为冰火炎功(965)1级</td></tr>
+<tr><td>2271</td><td>阿绣(221)第6格武功设为冰火炎功(965)1级</td></tr>
 <tr><td>2280</td><td>阿绣(221)第2格武功设为金乌刀法(247)1级</td></tr>
 <tr><td>2280</td><td>阿绣(221)第3格武功设为雪山剑法(73)1级</td></tr>
 <tr><td>2282</td><td>阿绣(221)第5格武功设为碧针清掌(38)1级</td></tr>
@@ -942,9 +947,9 @@
 <tr><td>1778</td><td>阿朱(225)第6格武功设为惊鸿照影(1008)1级</td></tr>
 <tr><td>1778</td><td>阿朱(225)第7格武功设为化石九转(942)1级</td></tr>
 <tr><td>1789</td><td>阿朱(225)第5格武功设为苍狼血魄(940)1级</td></tr>
-<tr><td>1791</td><td>阿朱(225)第3格武功设为龙行虎步(1078)1级</td></tr>
 <tr><td>1791</td><td>阿朱(225)第4格武功设为导气归虚(933)1级</td></tr>
-<tr><td>1791</td><td>阿朱(225)第6格武功设为天南剑法(721)1级</td></tr>
+<tr><td>1791</td><td>阿朱(225)第6格武功设为龙行虎步(1078)1级</td></tr>
+<tr><td>1791</td><td>阿朱(225)第7格武功设为天南剑法(721)1级</td></tr>
 <tr><td>1792</td><td>阿朱(225)第7格武功设为六脉神剑(452)1级</td></tr>
 <tr><td>1793</td><td>阿朱(225)第4格武功设为寒袖拂穴(328)1级</td></tr>
 <tr><td>1796</td><td>阿朱(225)第6格武功设为一阳指(332)1级</td></tr>
@@ -999,6 +1004,7 @@
 <tr><td>2318</td><td>阿青(229)第6格武功设为救赵挥金锤(640)1级</td></tr>
 <tr><td>2318</td><td>阿青(229)第7格武功设为意气素霓生(641)1级</td></tr>
 <tr><td>2318</td><td>阿青(229)第8格武功设为三杯吐然诺(637)1级</td></tr>
+<tr><td>2324</td><td>阿青(229)第2格武功设为飞仙剑阵(906)10级</td></tr>
 <tr><td>2324</td><td>阿青(229)第4格武功设为太玄虚箓(779)1级</td></tr>
 <tr><td>2327</td><td>阿青(229)第2格武功设为飞仙剑阵(906)10级</td></tr>
 <tr><td>2327</td><td>阿青(229)第3格武功设为越女神剑(485)1级</td></tr>
@@ -1185,14 +1191,14 @@
 <tr><td>2072</td><td>杨缃绮(350)第6格武功设为白蟒鞭法(260)1级</td></tr>
 <tr><td>2072</td><td>杨缃绮(350)第7格武功设为蛇行狸翻(738)1级</td></tr>
 <tr><td>2092</td><td>杨缃绮(350)第6格武功设为九阳神功(266)1级</td></tr>
-<tr><td>3114</td><td>杨缃绮(350)第5格武功设为玉女心经(287)1级</td></tr>
-<tr><td>3114</td><td>杨缃绮(350)第6格武功设为冰魄银针(702)1级</td></tr>
-<tr><td>3114</td><td>杨缃绮(350)第7格武功设为三无三不手(992)1级</td></tr>
-<tr><td>3114</td><td>杨缃绮(350)第8格武功设为云帚拂尘功(257)1级</td></tr>
-<tr><td>3190</td><td>杨缃绮(350)第4格武功设为玉女心经(287)1级</td></tr>
-<tr><td>3190</td><td>杨缃绮(350)第5格武功设为玉女剑法(76)1级</td></tr>
-<tr><td>3190</td><td>杨缃绮(350)第6格武功设为银索金铃(252)1级</td></tr>
-<tr><td>3190</td><td>杨缃绮(350)第7格武功设为玉蜂针(694)1级</td></tr>
+<tr><td>3114</td><td>杨缃绮(350)第6格武功设为玉女心经(287)1级</td></tr>
+<tr><td>3114</td><td>杨缃绮(350)第7格武功设为冰魄银针(702)1级</td></tr>
+<tr><td>3114</td><td>杨缃绮(350)第8格武功设为三无三不手(992)1级</td></tr>
+<tr><td>3114</td><td>杨缃绮(350)第9格武功设为云帚拂尘功(257)1级</td></tr>
+<tr><td>3190</td><td>杨缃绮(350)第5格武功设为玉女心经(287)1级</td></tr>
+<tr><td>3190</td><td>杨缃绮(350)第6格武功设为玉女剑法(76)1级</td></tr>
+<tr><td>3190</td><td>杨缃绮(350)第7格武功设为银索金铃(252)1级</td></tr>
+<tr><td>3190</td><td>杨缃绮(350)第8格武功设为玉蜂针(694)1级</td></tr>
 <tr><td>947</td><td>&amp;燕(351)第4格武功设为斗转星移(753)1级</td></tr>
 <tr><td>947</td><td>&amp;燕(351)第5格武功设为化石九转(942)1级</td></tr>
 <tr><td>947</td><td>&amp;燕(351)第6格武功设为惊鸿照影(1008)1级</td></tr>
@@ -1227,11 +1233,12 @@
 <tr><td>1955</td><td>方湘筠(405)第7格武功设为七伤拳(42)1级</td></tr>
 <tr><td>1955</td><td>方湘筠(405)第3格武功设为倚天剑法(85)1级</td></tr>
 <tr><td>1955</td><td>方湘筠(405)第8格武功设为狮子吼(708)1级</td></tr>
-<tr><td>1955</td><td>方湘筠(405)第8格武功设为玄功要诀(916)1级</td></tr>
+<tr><td>1955</td><td>方湘筠(405)第9格武功设为玄功要诀(916)1级</td></tr>
 <tr><td>1962</td><td>方湘筠(405)第6格武功设为黄天大法(368)1级</td></tr>
 <tr><td>1962</td><td>方湘筠(405)第7格武功设为天机棍法(476)1级</td></tr>
 <tr><td>2309</td><td>方湘筠(405)第5格武功设为银鞍白马(744)1级</td></tr>
 <tr><td>2309</td><td>方湘筠(405)第6格武功设为吴钩霜雪明(639)1级</td></tr>
+<tr><td>1903</td><td>阳顶天(425)第4格武功设为斗转星移(753)10级</td></tr>
 <tr><td>2487</td><td>费彬(431)第4格武功设为嵩阳神剑(484)10级</td></tr>
 <tr><td>2487</td><td>丁勉(432)第4格武功设为嵩阳神剑(484)10级</td></tr>
 <tr><td>2487</td><td>陆柏(433)第4格武功设为嵩阳神剑(484)10级</td></tr>
