update xw.html of 563k7

--- a/xw.html
+++ b/xw.html
@@ -161,6 +161,7 @@
 <tr><td>1955</td><td>殷素素(17)第8格武功设为狮子吼(708)1级</td></tr>
 <tr><td>1955</td><td>殷素素(17)第9格武功设为玄功要诀(916)1级</td></tr>
 <tr><td>1962</td><td>殷素素(17)第5格武功设为黄天大法(368)1级</td></tr>
+<tr><td>1962</td><td>殷素素(17)第6格武功设为天机棍法(476)1级</td></tr>
 <tr><td>2428</td><td>岳不群(19)第3格武功设为独孤九剑(457)10级</td></tr>
 <tr><td>2392</td><td>莫大先生(20)第4格武功设为衡山五神剑(70)10级</td></tr>
 <tr><td>2432</td><td>定闲师太(21)第4格武功设为天河剑法(483)10级</td></tr>
@@ -196,6 +197,7 @@
 <tr><td>1955</td><td>黛绮丝(30)第8格武功设为玄功要诀(916)1级</td></tr>
 <tr><td>1955</td><td>黛绮丝(30)天赋设为指挥若定(853)</td></tr>
 <tr><td>1962</td><td>黛绮丝(30)第5格武功设为黄天大法(368)1级</td></tr>
+<tr><td>1962</td><td>黛绮丝(30)第6格武功设为天机棍法(476)1级</td></tr>
 <tr><td>2445</td><td>林平之(36)第2格武功设为万剑归宗(769)10级</td></tr>
 <tr><td>2445</td><td>林平之(36)第3格武功设为独孤九剑(457)10级</td></tr>
 <tr><td>1632</td><td>阿紫(47)第2格武功设为流毒万方(897)10级</td></tr>
@@ -230,8 +232,8 @@
 <tr><td>1796</td><td>阿紫(47)第7格武功设为九阴梵纲(956)1级</td></tr>
 <tr><td>2309</td><td>阿紫(47)第5格武功设为银鞍白马(744)1级</td></tr>
 <tr><td>2309</td><td>阿紫(47)第6格武功设为三杯吐然诺(637)1级</td></tr>
-<tr><td>3234</td><td>阿紫(47)第3格武功设为易筋伐髓(268)1级</td></tr>
-<tr><td>3234</td><td>阿紫(47)第4格武功设为参合指(450)1级</td></tr>
+<tr><td>3234</td><td>阿紫(47)第4格武功设为易筋伐髓(268)1级</td></tr>
+<tr><td>3234</td><td>阿紫(47)第5格武功设为参合指(450)1级</td></tr>
 <tr><td>943</td><td>黄蓉(56)第1格武功设为乘龙御天(1018)10级</td></tr>
 <tr><td>950</td><td>黄蓉(56)第5格武功设为八阵伏龙(1032)10级</td></tr>
 <tr><td>950</td><td>黄蓉(56)天赋设为学究天人(852)</td></tr>
@@ -306,9 +308,8 @@
 <tr><td>3073</td><td>黄蓉(56)第8格武功设为降龙十八掌(453)1级</td></tr>
 <tr><td>3073</td><td>黄蓉(56)第8格武功设为流星神箭(710)1级</td></tr>
 <tr><td>3076</td><td>黄蓉(56)第5格武功设为三花聚顶掌(31)1级</td></tr>
-<tr><td>3076</td><td>黄蓉(56)第6格武功设为全真剑法(77)1级</td></tr>
+<tr><td>3076</td><td>黄蓉(56)第6格武功设为天武神经(939)1级</td></tr>
 <tr><td>3076</td><td>黄蓉(56)第7格武功设为碧海潮生曲(1017)1级</td></tr>
-<tr><td>3076</td><td>黄蓉(56)第8格武功设为天武神经(939)1级</td></tr>
 <tr><td>3079</td><td>黄蓉(56)第7格武功设为灵蛇杖法(264)1级</td></tr>
 <tr><td>3079</td><td>黄蓉(56)第7格武功设为蛤蟆功(331)1级</td></tr>
 <tr><td>3080</td><td>黄蓉(56)第7格武功设为九阴真经(267)1级</td></tr>
@@ -443,7 +444,6 @@
 <tr><td>1809</td><td>王语嫣(76)第5格武功设为凌波微步(746)1级</td></tr>
 <tr><td>1812</td><td>王语嫣(76)第8格武功设为踏月香华(932)1级</td></tr>
 <tr><td>1812</td><td>王语嫣(76)第9格武功设为一苇渡江(751)1级</td></tr>
-<tr><td>1812</td><td>王语嫣(76)天赋设为无上宗师(914)</td></tr>
 <tr><td>1949</td><td>王语嫣(76)第4格武功设为圣火万法(286)1级</td></tr>
 <tr><td>1949</td><td>王语嫣(76)第6格武功设为圣火诀(334)1级</td></tr>
 <tr><td>1949</td><td>王语嫣(76)天赋设为悲酥清风(860)</td></tr>
@@ -864,8 +864,8 @@
 <tr><td>3011</td><td>穆念慈(147)第8格武功设为铜锤手(296)1级</td></tr>
 <tr><td>3011</td><td>穆念慈(147)第9格武功设为满天花雨(689)1级</td></tr>
 <tr><td>3056</td><td>穆念慈(147)第4格武功设为瞬息千里(734)1级</td></tr>
-<tr><td>3076</td><td>穆念慈(147)第5格武功设为碧海潮生曲(1017)1级</td></tr>
 <tr><td>3076</td><td>穆念慈(147)第4格武功设为天武神经(939)1级</td></tr>
+<tr><td>3076</td><td>穆念慈(147)第5格武功设为碧海潮生曲(1017)1级</td></tr>
 <tr><td>2783</td><td>李文秀(148)第2格武功设为天王补心针(474)1级</td></tr>
 <tr><td>2783</td><td>李文秀(148)第4格武功设为绵里藏针(929)1级</td></tr>
 <tr><td>2785</td><td>李文秀(148)第3格武功设为雁行刀法(413)1级</td></tr>
@@ -879,8 +879,8 @@
 <tr><td>2309</td><td>骆冰(154)第5格武功设为银鞍白马(744)1级</td></tr>
 <tr><td>2309</td><td>骆冰(154)第6格武功设为救赵挥金锤(640)1级</td></tr>
 <tr><td>2739</td><td>骆冰(154)第4格武功设为柔云剑术(74)1级</td></tr>
-<tr><td>2739</td><td>骆冰(154)第4格武功设为片羽沾衣(1086)1级</td></tr>
-<tr><td>2739</td><td>骆冰(154)第5格武功设为芙蓉金针(683)1级</td></tr>
+<tr><td>2739</td><td>骆冰(154)第5格武功设为片羽沾衣(1086)1级</td></tr>
+<tr><td>2739</td><td>骆冰(154)第6格武功设为芙蓉金针(683)1级</td></tr>
 <tr><td>2739</td><td>骆冰(154)第6格武功设为无极玄功拳(16)1级</td></tr>
 <tr><td>2739</td><td>骆冰(154)第7格武功设为玄虚刀法(242)1级</td></tr>
 <tr><td>2755</td><td>骆冰(154)第4格武功设为回龙璧(698)1级</td></tr>
@@ -931,6 +931,7 @@
 <tr><td>1955</td><td>月奴(175)第7格武功设为狮子吼(708)1级</td></tr>
 <tr><td>1955</td><td>月奴(175)第8格武功设为玄功要诀(916)1级</td></tr>
 <tr><td>1962</td><td>月奴(175)第5格武功设为黄天大法(368)1级</td></tr>
+<tr><td>1962</td><td>月奴(175)第6格武功设为天机棍法(476)1级</td></tr>
 <tr><td>1374</td><td>马春花(177)第2格武功设为北斗仙踪(1007)1级</td></tr>
 <tr><td>1374</td><td>马春花(177)第4格武功设为狐行四相(934)1级</td></tr>
 <tr><td>1374</td><td>马春花(177)第5格武功设为化石九转(942)1级</td></tr>
@@ -1040,8 +1041,8 @@
 <tr><td>1793</td><td>阿朱(225)第4格武功设为寒袖拂穴(328)1级</td></tr>
 <tr><td>1796</td><td>阿朱(225)第6格武功设为一阳指(332)1级</td></tr>
 <tr><td>1796</td><td>阿朱(225)第7格武功设为九阴梵纲(956)1级</td></tr>
-<tr><td>3234</td><td>阿朱(225)第3格武功设为易筋伐髓(268)1级</td></tr>
-<tr><td>3234</td><td>阿朱(225)第4格武功设为参合指(450)1级</td></tr>
+<tr><td>3234</td><td>阿朱(225)第4格武功设为易筋伐髓(268)1级</td></tr>
+<tr><td>3234</td><td>阿朱(225)第5格武功设为参合指(450)1级</td></tr>
 <tr><td>1635</td><td>阿碧(226)第5格武功设为八荒六合(290)1级</td></tr>
 <tr><td>1636</td><td>阿碧(226)第5格武功设为八荒六合(290)1级</td></tr>
 <tr><td>1728</td><td>阿碧(226)第3格武功设为三笑逍遥散(1013)1级</td></tr>
@@ -1245,8 +1246,8 @@
 <tr><td>946</td><td>东方影(332)第6格武功设为独孤九剑(457)1级</td></tr>
 <tr><td>946</td><td>东方影(332)第7格武功设为玄铁剑法(91)1级</td></tr>
 <tr><td>946</td><td>东方影(332)第8格武功设为万剑归宗(769)1级</td></tr>
-<tr><td>1328</td><td>东方影(332)第6格武功设为吸星大法(757)1级</td></tr>
-<tr><td>1373</td><td>东方影(332)第6格武功设为吸星大法(757)1级</td></tr>
+<tr><td>1328</td><td>东方影(332)第6格武功设为化功大法(758)1级</td></tr>
+<tr><td>1373</td><td>东方影(332)第6格武功设为化功大法(758)1级</td></tr>
 <tr><td>2402</td><td>东方影(332)天赋设为志垂日月(1043)</td></tr>
 <tr><td>2433</td><td>东方影(332)第6格武功设为急风骤雨掌(25)1级</td></tr>
 <tr><td>2434</td><td>东方影(332)第4格武功设为大搜魂手(323)1级</td></tr>
