fix: fix some bugs

--- a/item.html
+++ b/item.html
@@ -393,7 +393,7 @@
 <tr><td>3056</td><td>【射雕璇玑篇】嘉兴城·再战欧阳锋</td><td>银两</td><td>获得银两(174)*8000</td></tr>
 <tr><td>1294</td><td>【飞雪倾眉线】玉笔山庄·玉笔山庄救援</td><td>银两</td><td>获得银两(174)*10000</td></tr>
 <tr><td>1570</td><td>【场景调查】莫斯科城·皇宫酒桶</td><td>银两</td><td>获得银两(174)*10000</td></tr>
-<tr><td>1632</td><td>【NPC对话】曼陀山庄·曼陀侍婢</td><td>银两</td><td>获得银两(174)*10000</td></tr>
+<tr><td>1632</td><td>【场景事件】星宿海·杀丁春秋</td><td>银两</td><td>获得银两(174)*10000</td></tr>
 <tr><td>3056</td><td>【射雕璇玑篇】嘉兴城·再战欧阳锋</td><td>银两</td><td>获得银两(174)*10000</td></tr>
 <tr><td>3260</td><td>【主线流程】燕子坞·游戏开场剧情</td><td>银两</td><td>获得银两(174)*10000</td></tr>
 <tr><td>1723</td><td>【天龙珍珑篇】恒山·战星宿弟子</td><td>银两</td><td>获得银两(174)*20000</td></tr>
@@ -432,7 +432,7 @@
 <tr><td>1258</td><td>【连城霜华线】荆州凌府·凌府进门</td><td>银两</td><td>背包增加银两(174)*-20</td></tr>
 <tr><td>1260</td><td>【连城霜华线】荆州凌府·凌府进门2</td><td>银两</td><td>背包增加银两(174)*-20</td></tr>
 <tr><td>2980</td><td>【射雕雕弓篇】张家口·初遇小叫化黄蓉</td><td>银两</td><td>背包增加银两(174)*-20</td></tr>
-<tr><td>1002</td><td>NULL</td><td>银两</td><td>背包增加银两(174)*-10</td></tr>
+<tr><td>1002</td><td>【NPC对话】通用·客栈掌柜</td><td>银两</td><td>背包增加银两(174)*-10</td></tr>
 <tr><td>1221</td><td>【NPC对话】杭州城·初遇吴六奇</td><td>银两</td><td>背包增加银两(174)*-10</td></tr>
 <tr><td>1238</td><td>【连城戚芳线】荆州凌府·凌府闯门</td><td>银两</td><td>背包增加银两(174)*100</td></tr>
 <tr><td>1417</td><td>【NPC对话】紫禁城·满清侍卫(战斗)</td><td>银两</td><td>背包增加银两(174)*200</td></tr>
@@ -885,7 +885,7 @@
 <tr><td>1477</td><td>【鹿鼎神龙线】庄府·杀吴三桂</td><td>驺虞</td><td>获得驺虞(512)*1</td></tr>
 <tr><td>1560</td><td>【鹿鼎天地线】庄府·杀吴三桂</td><td>驺虞</td><td>获得驺虞(512)*1</td></tr>
 <tr><td>3141</td><td>【神雕莫愁线】桃花岛·桃花血痕支线</td><td>玉蜂</td><td>获得玉蜂(513)*1</td></tr>
-<tr><td>3114</td><td>【神雕全线】活死人墓·天瑞华绫支线</td><td>天瑞华绫</td><td>获得天瑞华绫(514)*1</td></tr>
+<tr><td>3114</td><td>【神雕莫愁线】活死人墓·天瑞华绫支线</td><td>天瑞华绫</td><td>获得天瑞华绫(514)*1</td></tr>
 <tr><td>3190</td><td>【神雕龙女线】活死人墓·天瑞华绫支线</td><td>天瑞华绫</td><td>获得天瑞华绫(514)*1</td></tr>
 <tr><td>2465</td><td>【笑傲日月线】成德殿·东方影离别</td><td>山河社稷袍</td><td>获得山河社稷袍(515)*1</td></tr>
 <tr><td>2600</td><td>【笑傲五岳线】成德殿·东方影离别</td><td>山河社稷袍</td><td>获得山河社稷袍(515)*1</td></tr>
@@ -1308,12 +1308,12 @@
 <tr><td>1089</td><td>【场景调查】移花宫·箱子3</td><td>花间秘典</td><td>获得花间秘典(813)*1</td></tr>
 <tr><td>1962</td><td>【倚天圣火线】峨嵋金顶·战黄裳，得倚天屠龙记天书</td><td>黄天道藏功</td><td>获得黄天道藏功(814)*1</td></tr>
 <tr><td>1826</td><td>【天龙折箭线】上京城·战庞斑</td><td>魔道随想录</td><td>获得魔道随想录(815)*1</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>道心种魔大法</td><td>获得道心种魔大法(816)*1</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>道心种魔大法</td><td>获得道心种魔大法(816)*1</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>道心种魔大法</td><td>获得道心种魔大法(816)*1</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>道心种魔大法</td><td>获得道心种魔大法(816)*1</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>道心种魔大法</td><td>获得道心种魔大法(816)*1</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>道心种魔大法</td><td>获得道心种魔大法(816)*1</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>道心种魔大法</td><td>获得道心种魔大法(816)*1</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>道心种魔大法</td><td>获得道心种魔大法(816)*1</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>道心种魔大法</td><td>获得道心种魔大法(816)*1</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>道心种魔大法</td><td>获得道心种魔大法(816)*1</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>道心种魔大法</td><td>获得道心种魔大法(816)*1</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>道心种魔大法</td><td>获得道心种魔大法(816)*1</td></tr>
 <tr><td>2912</td><td>【慈航静斋支线】净念禅院·探访白马寺，找到和氏璧</td><td>不死印法卷册</td><td>获得不死印法卷册(817)*1</td></tr>
 <tr><td>1470</td><td>【鹿鼎神龙线】紫禁城·康熙归天</td><td>紫禁皇掌掌谱</td><td>获得紫禁皇掌掌谱(818)*1</td></tr>
 <tr><td>1549</td><td>【鹿鼎天地线】紫禁城·康熙归天</td><td>紫禁皇掌掌谱</td><td>获得紫禁皇掌掌谱(818)*1</td></tr>
