--- a/xw.html
+++ b/xw.html
@@ -28,18 +28,18 @@
 <tr><td>926</td><td>【主线流程】祖庙试炼·邪恶洗礼</td><td>谢衡(0)专精武功设为血靖轩辕(655)</td></tr>
 <tr><td>926</td><td>【主线流程】祖庙试炼·邪恶洗礼</td><td>谢衡(0)专精武功设为名动山河(657)</td></tr>
 <tr><td>926</td><td>【主线流程】祖庙试炼·邪恶洗礼</td><td>谢衡(0)专精武功设为锋芒傲世(656)</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>谢衡(0)第4格武功设为璇天星阵(885)10级</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>谢衡(0)第8格武功设为道心种魔(1090)1级</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>谢衡(0)第4格武功设为璇天星阵(885)10级</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>谢衡(0)第8格武功设为道心种魔(1090)1级</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>谢衡(0)第4格武功设为璇天星阵(885)10级</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>谢衡(0)第8格武功设为道心种魔(1090)1级</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>谢衡(0)第4格武功设为璇天星阵(885)10级</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>谢衡(0)第8格武功设为道心种魔(1090)1级</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>谢衡(0)第4格武功设为璇天星阵(885)10级</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>谢衡(0)第8格武功设为道心种魔(1090)1级</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>谢衡(0)第4格武功设为璇天星阵(885)10级</td></tr>
-<tr><td>927</td><td>【NPC对话】龙城祖庙·迷之狐狸(手术成功)</td><td>谢衡(0)第8格武功设为道心种魔(1090)1级</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>谢衡(0)第4格武功设为璇天星阵(885)10级</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>谢衡(0)第8格武功设为道心种魔(1090)1级</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>谢衡(0)第4格武功设为璇天星阵(885)10级</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>谢衡(0)第8格武功设为道心种魔(1090)1级</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>谢衡(0)第4格武功设为璇天星阵(885)10级</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>谢衡(0)第8格武功设为道心种魔(1090)1级</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>谢衡(0)第4格武功设为璇天星阵(885)10级</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>谢衡(0)第8格武功设为道心种魔(1090)1级</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>谢衡(0)第4格武功设为璇天星阵(885)10级</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>谢衡(0)第8格武功设为道心种魔(1090)1级</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>谢衡(0)第4格武功设为璇天星阵(885)10级</td></tr>
+<tr><td>927</td><td>【主线流程】祖庙试炼·种魔试炼</td><td>谢衡(0)第8格武功设为道心种魔(1090)1级</td></tr>
 <tr><td>943</td><td>【主线流程】华山论剑·论剑台剧情</td><td>谢衡(0)第1格武功设为星云剑气(982)1级</td></tr>
 <tr><td>943</td><td>【主线流程】华山论剑·论剑台剧情</td><td>谢衡(0)第1格武功设为天剑龙威(1198)10级</td></tr>
 <tr><td>943</td><td>【主线流程】华山论剑·论剑台剧情</td><td>谢衡(0)第2格武功设为天子剑法(659)1级</td></tr>
@@ -200,8 +200,8 @@
 <tr><td>1962</td><td>【倚天圣火线】峨嵋金顶·战黄裳，得倚天屠龙记天书</td><td>黛绮丝(30)第6格武功设为天机棍法(476)1级</td></tr>
 <tr><td>2445</td><td>【笑傲日月线】松风观·林平之复仇</td><td>林平之(36)第2格武功设为万剑归宗(769)10级</td></tr>
 <tr><td>2445</td><td>【笑傲日月线】松风观·林平之复仇</td><td>林平之(36)第3格武功设为独孤九剑(457)10级</td></tr>
-<tr><td>1632</td><td>【NPC对话】曼陀山庄·曼陀侍婢</td><td>阿紫(47)第2格武功设为流毒万方(897)10级</td></tr>
-<tr><td>1632</td><td>【NPC对话】曼陀山庄·曼陀侍婢</td><td>阿紫(47)天赋设为紫辰星瞳(870)</td></tr>
+<tr><td>1632</td><td>【场景事件】星宿海·杀丁春秋</td><td>阿紫(47)第2格武功设为流毒万方(897)10级</td></tr>
+<tr><td>1632</td><td>【场景事件】星宿海·杀丁春秋</td><td>阿紫(47)天赋设为紫辰星瞳(870)</td></tr>
 <tr><td>1723</td><td>【天龙珍珑篇】恒山·战星宿弟子</td><td>阿紫(47)第3格武功设为碧磷针(673)1级</td></tr>
 <tr><td>1723</td><td>【天龙珍珑篇】恒山·战星宿弟子</td><td>阿紫(47)第4格武功设为穿心钉(674)1级</td></tr>
 <tr><td>1723</td><td>【天龙珍珑篇】恒山·战星宿弟子</td><td>阿紫(47)第5格武功设为极乐刺(675)1级</td></tr>
@@ -897,11 +897,11 @@
 <tr><td>3000</td><td>【神雕主线】武昌城·与李莫愁战全真七子</td><td>李莫愁(161)第6格武功设为回风舞柳剑(714)1级</td></tr>
 <tr><td>3000</td><td>【神雕主线】武昌城·与李莫愁战全真七子</td><td>李莫愁(161)第7格武功设为如影随行腿(772)1级</td></tr>
 <tr><td>3081</td><td>【神雕莫愁线】华山绝顶·九阴真经支线</td><td>李莫愁(161)第6格武功设为九阴真经(267)1级</td></tr>
-<tr><td>3114</td><td>【神雕全线】活死人墓·天瑞华绫支线</td><td>李莫愁(161)第3格武功设为云帚拂尘功(257)1级</td></tr>
-<tr><td>3114</td><td>【神雕全线】活死人墓·天瑞华绫支线</td><td>李莫愁(161)第4格武功设为玉女心经(287)1级</td></tr>
-<tr><td>3114</td><td>【神雕全线】活死人墓·天瑞华绫支线</td><td>李莫愁(161)第5格武功设为冰魄银针(702)1级</td></tr>
-<tr><td>3114</td><td>【神雕全线】活死人墓·天瑞华绫支线</td><td>李莫愁(161)第6格武功设为三无三不手(992)1级</td></tr>
-<tr><td>3114</td><td>【神雕全线】活死人墓·天瑞华绫支线</td><td>李莫愁(161)第7格武功设为五毒神掌(7)1级</td></tr>
+<tr><td>3114</td><td>【神雕莫愁线】活死人墓·天瑞华绫支线</td><td>李莫愁(161)第3格武功设为云帚拂尘功(257)1级</td></tr>
+<tr><td>3114</td><td>【神雕莫愁线】活死人墓·天瑞华绫支线</td><td>李莫愁(161)第4格武功设为玉女心经(287)1级</td></tr>
+<tr><td>3114</td><td>【神雕莫愁线】活死人墓·天瑞华绫支线</td><td>李莫愁(161)第5格武功设为冰魄银针(702)1级</td></tr>
+<tr><td>3114</td><td>【神雕莫愁线】活死人墓·天瑞华绫支线</td><td>李莫愁(161)第6格武功设为三无三不手(992)1级</td></tr>
+<tr><td>3114</td><td>【神雕莫愁线】活死人墓·天瑞华绫支线</td><td>李莫愁(161)第7格武功设为五毒神掌(7)1级</td></tr>
 <tr><td>3130</td><td>【神雕莫愁线】百花谷·战一灯救李莫愁</td><td>李莫愁(161)第3格武功设为普通攻击(0)1级</td></tr>
 <tr><td>3130</td><td>【神雕莫愁线】百花谷·战一灯救李莫愁</td><td>李莫愁(161)第4格武功设为普通攻击(0)1级</td></tr>
 <tr><td>3130</td><td>【神雕莫愁线】百花谷·战一灯救李莫愁</td><td>李莫愁(161)第5格武功设为普通攻击(0)1级</td></tr>
@@ -1305,10 +1305,10 @@
 <tr><td>2072</td><td>【倚天武当线】少室山·杨缃绮归心</td><td>杨缃绮(350)第6格武功设为白蟒鞭法(260)1级</td></tr>
 <tr><td>2072</td><td>【倚天武当线】少室山·杨缃绮归心</td><td>杨缃绮(350)第7格武功设为蛇行狸翻(738)1级</td></tr>
 <tr><td>2092</td><td>【倚天武当线】紫霄宫·九阳神功支线(救赵敏)</td><td>杨缃绮(350)第6格武功设为九阳神功(266)1级</td></tr>
-<tr><td>3114</td><td>【神雕全线】活死人墓·天瑞华绫支线</td><td>杨缃绮(350)第6格武功设为玉女心经(287)1级</td></tr>
-<tr><td>3114</td><td>【神雕全线】活死人墓·天瑞华绫支线</td><td>杨缃绮(350)第7格武功设为冰魄银针(702)1级</td></tr>
-<tr><td>3114</td><td>【神雕全线】活死人墓·天瑞华绫支线</td><td>杨缃绮(350)第8格武功设为三无三不手(992)1级</td></tr>
-<tr><td>3114</td><td>【神雕全线】活死人墓·天瑞华绫支线</td><td>杨缃绮(350)第9格武功设为云帚拂尘功(257)1级</td></tr>
+<tr><td>3114</td><td>【神雕莫愁线】活死人墓·天瑞华绫支线</td><td>杨缃绮(350)第6格武功设为玉女心经(287)1级</td></tr>
+<tr><td>3114</td><td>【神雕莫愁线】活死人墓·天瑞华绫支线</td><td>杨缃绮(350)第7格武功设为冰魄银针(702)1级</td></tr>
+<tr><td>3114</td><td>【神雕莫愁线】活死人墓·天瑞华绫支线</td><td>杨缃绮(350)第8格武功设为三无三不手(992)1级</td></tr>
+<tr><td>3114</td><td>【神雕莫愁线】活死人墓·天瑞华绫支线</td><td>杨缃绮(350)第9格武功设为云帚拂尘功(257)1级</td></tr>
 <tr><td>3190</td><td>【神雕龙女线】活死人墓·天瑞华绫支线</td><td>杨缃绮(350)第5格武功设为玉女心经(287)1级</td></tr>
 <tr><td>3190</td><td>【神雕龙女线】活死人墓·天瑞华绫支线</td><td>杨缃绮(350)第6格武功设为玉女剑法(76)1级</td></tr>
 <tr><td>3190</td><td>【神雕龙女线】活死人墓·天瑞华绫支线</td><td>杨缃绮(350)第7格武功设为银索金铃(252)1级</td></tr>
